Hardcodeando en las presentaciones del Devf

--- a/template/home.html
+++ b/template/home.html
@@ -6,14 +6,15 @@
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link href="{% static "css/home.css" %}" rel="stylesheet">
+  <link href="css/hover.css" rel="stylesheet" media="all">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<title>XmasLetters</title>
+	<title>Home</title>
 </head>
 
 <body>
 
     <div class="container">
-       <div class="row">
+       <h1><div class="row"></h1>
           <div class="span12">
 
                 <nav class="navbar navbar-default">
@@ -62,7 +63,9 @@
             <div class="jumbotron">
               <h1>Stay in touch with Santa :)</h1>
               <p>Aqui se responde el que y el como ademas deveriamos agregar una buena historia que haga a los usarios sentir empatia con la aplicación, hacerlos pensar que les sera útil. </p>
-              <p><a class="btn btn-primary btn-lg" href="http://localhost:8000/makeletter" role="button">Write your letter!</a></p>
+              
+
+              <p><a class="btn btn-primary btn-lg hvr-grow-rotate"  href="http://localhost:8000/makeletter" role="button">Write your letter!</a></p>
             </div>
     </div>
 </body>
