--- a/statics/css/cover.css
+++ b/statics/css/cover.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #EFF2EF;
 }
 
 /* Custom default button */
@@ -46,6 +46,8 @@ p {
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
+
+
 .site-wrapper {
   display: table;
   width: 100%;
@@ -127,6 +129,30 @@ p {
   padding: 10px 20px;
   font-weight: normal;
 }
+
+.hvr-grow-rotate {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  color: #EFF2EF;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #589EB0;
+  border: 4px solid #4C89A0;
+}
+.hvr-grow-rotate:hover, .hvr-grow-rotate:focus, .hvr-grow-rotate:active {
+  -webkit-transform: scale(1.1) rotate(4deg);
+  transform: scale(1.1) rotate(4deg);
+}
+
 
 
 /*
