--- a/statics/css/home.css
+++ b/statics/css/home.css
@@ -1,5 +1,43 @@
 html,
 body {
   height: 100%;
-  background-color: #D5233C;
+  background-color: #D5233C
+}
+.navbar  {
+	background-color: #D5233C;
+	border-color: #D5233C;
+}
+
+/* no jala el color en el texto*/
+.nav li a {
+	color: #EFF2EF
+}
+
+.jumbotron {
+	background-color: #8A222A;
+	border-color: #DA0E27;
+	text-align: center;
+}
+
+.jumbotron h1 {
+	color: #EFF2EF;
+}
+
+.hvr-grow-rotate {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow-rotate:hover, .hvr-grow-rotate:focus, .hvr-grow-rotate:active {
+  -webkit-transform: scale(1.1) rotate(4deg);
+  transform: scale(1.1) rotate(4deg);
 }
