--- a/template/cover.html
+++ b/template/cover.html
@@ -9,8 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
+    <link href="css/hover.css" rel="stylesheet" media="all">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Xmas Letters</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
@@ -47,8 +48,9 @@
             <h1 class="cover-heading">Get what you want this Christmas!</h1>
             <p class="lead-container">This is a web application to help you get what you want this Xmas!. We know you've been such a good kid, why don't share it with the world?</p>
             <p class="lead">
+
               <a href="http://localhost:8000/home" class="btn btn-lg btn-default">Get to know us</a>
-              <a href="http://localhost:8000/makeletter" class="btn btn-lg btn-default">Make a letter</a>
+              <a href="http://localhost:8000/makeletter" class="btn btn-primary btn-lg hvr-grow-rotate">Make a letter</a>
             </p>
           </div>
 
