--- a/template/worldletters.html
+++ b/template/worldletters.html
@@ -1,10 +1,146 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
-	
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+  <meta charset="UTF-8">
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link href="{% static "css/home.css" %}" rel="stylesheet">
+  <link href="css/signin.css" rel="stylesheet" media="all">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+
+    <title>World Letters</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Custom styles for this template -->
+    <link href="carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+
+<div class="container">
+       <h1><div class="row"></h1>
+          <div class="span12">
+
+                <nav class="navbar navbar-default">
+                              <div class="container-fluid">
+                                <!-- Brand and toggle get grouped for better mobile display -->
+                                <div class="navbar-header">
+                                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                  </button>
+                                  <a class="navbar-brand" href="#"><strong>Xmas <em>Letters</em></strong></a>
+                                </div>
+
+                                <!-- Collect the nav links, forms, and other content for toggling -->
+                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                  <ul class="nav navbar-nav">
+                                    <li><a href="http://localhost:8000/makeletter">Make one</a></li>
+                                    <li class="dropdown">
+                                      <a href="http://localhost:8000/worldletters" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">World Letters <span class="caret"></span></a>
+                                      <ul class="dropdown-menu">
+                                        <li><a href="http://localhost:8000/worldletters">Check randomn letters from the world</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a href="http://localhost:8000/worldletters">Find your letter</a></li>
+                                        <!-- deberiamos colocar un metodo que nos permita tanto buscar cartas randomn, como buscar cartas por medio de una key, nombre o mail -->
+                                      </ul>
+                                    </li>
+                                  </ul>
+                                  <form class="navbar-form navbar-rigth" role="search">
+                                    <div class="form-group">
+                                      <input type="text" class="form-control" placeholder="Search for toys">
+                                    </div>
+                                    <button type="submit" class="btn btn-default">Find them all!!!</button>
+                                  </form>
+                                  
+                                </div><!-- /.navbar-collapse -->
+                              </div><!-- /.container-fluid -->
+                </nav>  
+
+            </div>
+        </div>
+    </div>
+
+      </div>
+    </div>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="container carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="http://i3.kym-cdn.com/photos/images/original/000/234/739/fa5.jpg" >
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="http://i3.kym-cdn.com/photos/images/original/000/234/739/fa5.jpg" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="http://i3.kym-cdn.com/photos/images/original/000/234/739/fa5.jpg">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+  </body>
 </html>
